# pymusicy

./: Dockerfile  Makefile  README.md  chord_hero.py  chords.json  main.spec  pyproject.toml
src/assets/: chords.json
src/audio/: chord_sampler.py  synthesizer.py
src/game/: engine.py
src/utils/: config.py  data_loader.py  paths.py
src/vision/: gesture_recognizer.py  tracker.py
