[project]
name = "pymusicy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = ["pyinstaller>=6.0.0"]
